[package]
name = "verlet_multithreaded"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
speedy2d = "1.12.0"
vecto-rs = { git = "https://github.com/Zycrasion/vecto-rs", version = "*" }

[profile.dev]
opt-level = 3